--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/cron-job",
-      "schedule": "0/5 0 * * *"
+      "schedule": "0/3 * * * *"
     }
   ]
 }
